app/components/views/TransactionsPage/ReceiveTab/ReceivePage/ReceivePage.module.css
.receiveContent {
  background-color: var(--background-back-color);
  padding: 30px 40px;
  width: 684px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.inputs {
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
  margin-bottom: 25px;
}

.inputWrapper {
  display: flex;
  flex-direction: column;
}
.inputWrapper.amountInputWrapper {
  align-self: flex-end;
}

.receiveSelectAmountInput {
  display: flex;
}

.receiveSelectAccountSelect a {
  margin-left: 10px;
}

.receiveSelectAccountSelectInput {
  width: 344px;
}

.requestedAmountInput {
  width: 246px;
}

.receiveRequestedAmount {
  display: flex;
  margin-bottom: 20px;
}
.receiveContentNestQR {
  margin-right: 10px;
  background-color: var(--light-blue);
  border-radius: 5px;
  vertical-align: middle;
  height: 40px;
  width: 616px;
  color: var(--main-dark-blue);
  font-size: 16px;
  font-weight: 400;
  text-align: center;
  line-height: 40px;
  position: relative;
  border: 1px transparent solid;
  transition: border-color 1s;
}

.receiveContentNestQR:hover {
  border-color: var(--input-copy-hover-color);
}

.border {
  border-color: var(--input-copy-hover-color);
}

.receiveContentNestCopyQR {
  position: absolute;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
  margin: 41px auto auto auto;
  width: 118px;
  height: 35px;
  background-color: transparent;
  z-index: 2;
  opacity: 0;
  transition: opacity 1s;
  transition-duration: 0.5s;
}

.opacity {
  opacity: 1 !important;
}

.receiveContentNestCopyQRText {
  width: 118px;
  height: 20px;
  background-color: var(--background-back-color);
  box-shadow: 0px 3px 13px var(--icons-shadow);
  border-radius: 5px;
  color: var(--link-color);
  font-size: 9px;
  font-weight: normal;
  line-height: 20px;
  white-space: pre;
}

.receiveContentNestCopyQRArrow {
  position: relative;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid var(--background-back-color);
  margin-left: auto;
  margin-right: auto;
  width: 0;
  height: 0;
}

.line {
  display: flex;
  align-items: center;
}

.inputWrapper label {
  margin: 0;
  color: var(--grey-7);
  font-size: 13px;
  line-height: 16px;
}

.receiveContentCopyButton {
  background-repeat: no-repeat;
  background-position: center;
  background-image: var(--copy-to-clipboard-icon);
  background-size: 14px 14px;
  height: 24px;
  width: 24px;
  box-shadow: 0px 3px 5px var(--icons-shadow);
  border-radius: 5px;
  cursor: pointer;
  margin-right: 10px;
}

.receiveContentQRButton {
  background-repeat: no-repeat;
  background-position: center;
  background-image: var(--view-qr-icon);
  background-size: 14px 14px;
  height: 24px;
  width: 24px;
  box-shadow: 0px 3px 5px var(--icons-shadow);
  border-radius: 5px;
  cursor: pointer;
}

.receiveContentShareButton {
  background-repeat: no-repeat;
  background-position: center;
  background-image: var(--share-icon);
  background-size: 20px 20px;
  height: 30px;
  width: 30px;
  box-shadow: 0px 3px 5px var(--icons-shadow);
  border-radius: 5px;
  cursor: pointer;
  margin: 0 15px 2px 15px;
}

.receiveContentCopyButton:hover {
  background-color: var(--background-copy-color);
}

.receiveContentQRButton:hover {
  background-color: var(--background-copy-color);
}

.receiveContentShareButton:hover {
  background-color: var(--background-copy-color);
}

.generateButton {
  position: relative;
  margin-top: 20px;
  margin-left: 550px;
  width: 215px;
  height: 44px;
}

.blueButton {
  font-size: 16px;
}

@media screen and (max-width: 768px) {
  .receiveContent {
    width: 355px;
  }

  .inputs {
    flex-direction: column;
  }

  .inputWrapper.amountInputWrapper {
    align-self: flex-start;
    margin-top: 20px;
  }

  .requestedAmountInput {
    width: 321px;
  }

  .receiveContentNestPrefix {
    margin-bottom: 10px;
  }

  .line {
    flex-wrap: wrap;
    justify-content: center;
  }

  .receiveContentNestQR {
    margin-bottom: 30px;
    margin-right: 0;
    font-size: 17px;
  }

  .generateButton {
    margin-left: 216px;
  }

  .copyParent {
    margin-left: -28px;
  }
}

